jellymon/jellymon.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jellyfin
    app.kubernetes.io/instance: jellyfin
    app.kubernetes.io/name: jellyfin
  name: jellyfin
  namespace: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
        app.kubernetes.io/name: jellyfin
    spec:
      nodeSelector:
        nvidia.com/gpu.present: "true"
      containers:
        - image: jellyfin/jellyfin
          imagePullPolicy: Always
          name: jellyfin
          resources:
            limits:
              nvidia.com/gpu: "1" # requesting 1 GPU
          ports:
            - containerPort: 8096
              name: web
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: jellyfin
              subPath: config
            - mountPath: /cache
              name: jellyfin
              subPath: cache
            - mountPath: /opt/data
              name: data
              subPath: data
      volumes:
        - name: jellyfin
          persistentVolumeClaim:
            claimName: jellyfin-pvc
        - name: data
          persistentVolumeClaim:
            claimName: jellyfin-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jellyfin
  name: jellyfin
  namespace: jellyfin
spec:
  ports:
    - name: web-tcp
      port: 8096
      protocol: TCP
      targetPort: 8096
    - name: web-udp
      port: 8096
      protocol: UDP
      targetPort: 8096
  selector:
    app: jellyfin
